mouse overflow fix

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -23,7 +23,9 @@
 }
 
 html {
+  overflow-x: hidden;
   scroll-behavior: smooth;
+  scrollbar-color: $coral transparent;
 }
 
 body {
