--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,9 @@
 }
 
 html {
+  overflow-x: hidden;
   scroll-behavior: smooth;
+  scrollbar-color: #e48c66 transparent;
 }
 
 body {
